--- a/applicantsReg/templates/profile_view.html
+++ b/applicantsReg/templates/profile_view.html
@@ -253,7 +253,7 @@
                       </button>
                     </h2>
                     <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
-                      <div class="accordion-body">
+                      <div class="accordion-body table-responsive">
                         <table class="table table-striped table-bordered">
                           <tbody>
       
