--- a/applicantsReg/templates/userinfo.html
+++ b/applicantsReg/templates/userinfo.html
@@ -252,9 +252,9 @@
                       </button>
                     </h2>
                     <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
-                      <div class="accordion-body">
+                      <div class="accordion-body table-responsive">
                         <table class="table table-striped table-bordered">
-                          <tbody>
+                         
       
                             <tr>
                               <th scope="row">professional Qualifications</th>
