--- a/applicantsReg/templates/addmission_status.html
+++ b/applicantsReg/templates/addmission_status.html
@@ -9,14 +9,14 @@
 
    </div>
    <div class="col-md-10" style="height: auto;">
-    <div class="card mt-3" style="padding: 2rem;  background-color:#b3967c2d ">
+    <div class="card mt-3" style=" background-color:#b3967c2d ">
       <div class="card-header d-flex flex-column align-items-center">
         
       {% if applicant_details.profile_image %}
-      <img class="rounded-circle" style="width:150px; height: 150px; margin-top: 2rem;" 
+      <img class="rounded-circle" style="width:100px; height: 100px; margin-top: 2rem;" 
       src="{{applicant_details.profile_image.url}}" alt="">
     {%else%}
-    <img class="rounded-circle" style="width:16%; margin-left:42%; margin-top: 2rem;" 
+    <img class="rounded-circle" style="width:100px; height: 100px; margin-top: 2rem;" 
     src="{%static 'img/avatar.jpg'%}" alt="">
     {% endif %}
 
