--- a/applicantsReg/templates/profile_view.html
+++ b/applicantsReg/templates/profile_view.html
@@ -13,10 +13,10 @@
       <i class="fa-solid fa-backward"></i>
     Back to application
   </a>
-    <div class="card mt-1" style="padding: 2rem; background-color:#b3967c2d ;">
+    <div class="card mt-1" style="background-color:#b3967c2d ;">
       <div class="card-header d-flex flex-column align-items-center">
         {% if applicant_details.profile_image %}
-        <img class="rounded-circle" style="width:200px; height: 200px; margin-top: 2rem;" 
+        <img class="rounded-circle" style="width:100px; height: 100px; margin-top: 2rem;" 
         src="{{applicant_details.profile_image.url}}" alt="">
       {%else%}
       <img class="rounded-circle" style="width:150px; height: 150px; margin-top: 2rem;" 
