--- a/applicantsReg/templates/userinfo.html
+++ b/applicantsReg/templates/userinfo.html
@@ -13,9 +13,9 @@
 
    </div>
    <div class="col-md-6" style="height: auto;">
-    <div class="card mt-3" style="padding: 2rem;">
+    <div class="card mt-3" style="width: 98%; margin-left: 2%;">
       <div class="card-header d-flex flex-column align-items-center">
-        <img class="rounded-circle" style="width:150px; height: 150px; margin-top: 2rem;" 
+        <img class="rounded-circle" style="width:100px; height: 100px; margin-top: 2rem;" 
         src="{{applicant_details.profile_image.url}}" alt="">
         <h6 style="text-align: center;"><strong>{{applicant_details.firstname}} {{applicant_details.last_name}}</strong></h6>
                  <h6 style="text-align: center; margin-bottom: 2rem;">{{applicant_details.user.email}}</h6>
