--- a/applicantsReg/templates/addmission_status.html
+++ b/applicantsReg/templates/addmission_status.html
@@ -24,21 +24,21 @@
                <h6 style="text-align: center; margin-bottom: 2rem;">{{applicant_details.user.email}}</h6>
       </div>
         {%if addmitted.addmission_approval == "Approved"%}
-        <p style="text-align: center; margin-top: 1rem; margin-bottom: 1rem; color: rgb(67, 238, 67);">
+        <p style="text-align: center; margin-top: 1rem; margin-bottom: 1rem; color: orange;">
         <strong>!!!!!Congratulations {{applicant_details.firstname}}  {{applicant_details.last_name}} {{addmitted.feedback}}
         </p>
         <table class="table table-striped table-bordered">
             <tbody>
               <tr>
-                <th scope="row">Country Addmmitted</th>
+                <th scope="row">Country Admitted</th>
                 <td>{{addmitted.country_selected}}</td>
               </tr>
               <tr>
-                <th scope="row">University Addmmitted</th>
+                <th scope="row">University Admitted</th>
                 <td>{{addmitted.addmitted_university}}</td>
               </tr>
               <tr>
-                <th scope="row">Programme Allocatted</th>
+                <th scope="row">Programme Allocated</th>
                 <td>{{addmitted.allocated_progrramme}}</td>
               </tr>
               <tr>
