--- a/applicantsReg/templates/addmssion_status_for_staff.html
+++ b/applicantsReg/templates/addmssion_status_for_staff.html
@@ -27,15 +27,15 @@
         <table class="table table-striped table-bordered">
             <tbody>
               <tr>
-                <th scope="row">Country Addmmitted</th>
+                <th scope="row">Country Admitted</th>
                 <td>{{addmitted.country_selected}}</td>
               </tr>
               <tr>
-                <th scope="row">University Addmmitted</th>
+                <th scope="row">University Admitted</th>
                 <td>{{addmitted.addmitted_university}}</td>
               </tr>
               <tr>
-                <th scope="row">Programme Allocatted</th>
+                <th scope="row">Programme Allocated</th>
                 <td>{{addmitted.allocated_progrramme}}</td>
               </tr>
               <tr>
