--- a/applicantsReg/templates/base.html
+++ b/applicantsReg/templates/base.html
@@ -24,16 +24,16 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #974b00;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="{% static 'img/logoCrop.png' %}" alt="Logo" style="width: 100px; height: 50px;"></a>
+    <a class="navbar-brand" href="#"><img src="{% static 'img/logoCrop.png' %}" alt="Logo" style="width: 110px; height: 50px; background-color: white; padding: 10px; border-radius: 5%;"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
-          <a href="{% url 'home' %}" class="nav-link text-secondary">Home</a>
+          <a href="{% url 'home' %}" class="nav-link text-white">Home</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link text-white">Universities</a>
