--- a/applicantsReg/templates/homepage.html
+++ b/applicantsReg/templates/homepage.html
@@ -8,35 +8,37 @@
 
 {% block content %}
 <div class="container-fluid px-0">
-  <div class="row mx-0" style="background-image: linear-gradient(to right, #806d5c, #e4ddd7); padding: 1rem 0;">
+  <div class="row mx-0" style="padding: 1rem 0;">
     <div class="col-md-4 d-flex justify-content-center align-items-center">
-      <img class="rounded-circle animate__animated animate__bounceIn animate__delay-0.5s" style="background-color: white; width: 90%; margin-bottom: 1rem;" src="{% static 'img/General_log_page-0001-removebg-preview.png' %}" alt="">
+      <div style=" border: 5px solid #974b00 ; margin-bottom: 1rem;">
+        <img class="animate__animated animate__bounceIn animate__delay-0.5s" style="background-color: white; width: 70%; margin-bottom: 1rem; margin-left: 15%;" src="{% static 'img/General_log_page-0001-removebg-preview.png' %}" alt="">
+      </div>
     </div>
     <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
       <a href="{% url 'register' %}" class="text-decoration-none w-100">
-        <div class="card animate__animated animate__fadeInLeftBig animate__delay-1s mb-3" style="background-color: #504033;">
+        <div class="card animate__animated animate__fadeInLeftBig animate__delay-1s mb-3" style="background-color: #5c3610;">
           <div class="card-body">
             <h2 class="text-center text-white mb-0">LIDEGE EDUCATION LINK</h2>
           </div>
         </div>
       </a>
       <a href="#" class="text-decoration-none w-100">
-        <div class="card animate__animated animate__fadeInRightBig animate__delay-1.5s mb-3" style="background-color: #29221b;">
+        <div class="card rounded animate__animated animate__fadeInRightBig animate__delay-1.5s mb-3" style="background-color: #974b00;">
           <div class="card-body">
             <h2 class="text-center text-white mb-0">LIDEGE MEDICAL TOURISM</h2>
           </div>
         </div>
       </a>
       <a href="#" class="text-decoration-none w-100">
-        <div class="card animate__animated animate__fadeInLeftBig animate__delay-2s mb-3" style="background-color: #18120d;">
+        <div class="card animate__animated animate__fadeInLeftBig animate__delay-2s mb-3" style="background-color: #5c3610;">
           <div class="card-body">
             <h2 class="text-center text-white mb-0">LIDEGE LOGISTICS</h2>
           </div>
         </div>
       </a>
     </div>
-    <div class="col-md-2 animate__animated animate__fadeInRightBig animate__delay-2.5s" style="background-color: #9c8a79;">
-      <div class="card mt-2" style="background-color: #29221b5d;">
+    <div class="col-md-2 animate__animated animate__fadeInRightBig animate__delay-2.5s" style="background-color: #8f551a;">
+      <div class="card mt-2" style="">
         <img class="card-img-top" src="{% static 'img/student1.png' %}" alt="Student Image">
         <div class="card-body">
           <p>Degrees from Global institutions hold weight in the international job market, making graduates competitive and sought after by employers.</p>
@@ -44,6 +46,10 @@
       </div>
     </div>
   </div>
-  <div class="row mx-0" style="background-image: linear-gradient(to right, #D9CCC1, #806d5c); height: 10rem;"></div>
+  <div class="row mx-0" style="height: 10rem; background-color: #5c3610;">
+    <div style="height: 98%; width: 98%; background-color: white; margin-top: 0.5rem;margin-left: 0.5rem;">
+
+    </div>
+  </div>
 </div>
 {% endblock %}
