--- a/applicantsReg/templates/base5.html
+++ b/applicantsReg/templates/base5.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+<header class="navbar navbar-dark sticky-top flex-md-nowrap p-0 shadow" style="background-color: #974b00;">
   <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#"></a>
   <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -48,48 +48,48 @@
   <div class="navbar-nav">
     <div class="nav-item text-nowrap">
         
-      <a class="btn px-3" style="margin: 0.2rem; background-color:#d1bdaa83 ;" href="{%url 'logout'%}"><i class="fa-solid fa-right-from-bracket"></i><strong>Sign out</strong></a>
+      <a class="btn px-3" style="margin: 0.2rem; background-color:#4d4238ce ;" href="{%url 'logout'%}"><i class="fa-solid fa-right-from-bracket"></i><strong>Sign out</strong></a>
     </div>
   </div>
 </header>
 
 <div class="container-fluid">
   <div class="row">
-    <nav id="sidebarMenu" class="col-md-2 d-md-block  sidebar collapse" style="background-color:#b1998285 ;">
+    <nav id="sidebarMenu" class="col-md-2 d-md-block  sidebar collapse" style="background-color:#b19982;">
       <div class="position-sticky">
              <div>
-                <img src="{%static 'img/lidege_logo__1__page-0001-removebg-preview (1).png'%}" alt="" style="width:80%; height: 200px; margin-bottom: 1rem; margin-top: 0.5rem; margin-left: 10%; padding: 0.5rem;">
+                <img src="{%static 'img/lidege_logo__1__page-0001-removebg-preview (1).png'%}" alt="" style="width:70%; height: 200px; margin-bottom: 1rem; margin-top: 0.5rem; margin-left: 15%; padding: 0.5rem;">
              </div>
        
-            <a class="btn" style="width: 90%; margin-left: 5%; margin-bottom:1rem; background-color:#615242; color: white;" href="{%url 'profile'%}">
+            <a class="btn" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; color: white; border-radius: 50px; padding: 10px 20px;" href="{%url 'profile'%}">
             <i class="fa-solid fa-address-card"></i>
             application status
             </a>
           
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:1rem; background-color:#4d4034;" href="{%url 'addmission_status'%}">
+            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="{%url 'addmission_status'%}">
                 <i class="fa-solid fa-address-card"></i>
                 Addmission Status
             </a>
           
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:1rem; background-color:#3a3027;" href="#">
+            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
                 <i class="fa-solid fa-question"></i>
                 help desk
             </a>
           
           
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:1rem; background-color:#29221c;" href="#">
+            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
                 <i class="fa-solid fa-graduation-cap"></i>
                 Schoralships
             </a>
           
           
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:1rem; background-color:#16130f;" href="#">
+            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
                 <i class="fa-solid fa-key"></i>
               change password
             </a>
           
         
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:1rem; background-color:#000000;" href="#">
+            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
                 <i class="fa-solid fa-trash"></i>
              Delete account
             </a>
