--- a/applicantsReg/templates/homepage.html
+++ b/applicantsReg/templates/homepage.html
@@ -15,26 +15,14 @@
       </div>
     </div>
     <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
-      <a href="{% url 'register' %}" class="text-decoration-none w-100">
-        <div class="card animate__animated animate__fadeInLeftBig animate__delay-1s mb-3" style="background-color: #5c3610;">
-          <div class="card-body">
-            <h2 class="text-center text-white mb-0">LIDEGE EDUCATION LINK</h2>
-          </div>
-        </div>
+      <a href="{% url 'register' %}" class="text-decoration-none btn" style="height: 5rem; background-color:#5c3610 ; width:96%; border-radius: 50px; padding: 10px 20px; margin-bottom: 1rem;" >
+        <h2 class="text-center text-white mb-0" style="padding: 0.3rem;">LIDEGE EDUCATION LINK</h2> 
       </a>
-      <a href="#" class="text-decoration-none w-100">
-        <div class="card rounded animate__animated animate__fadeInRightBig animate__delay-1.5s mb-3" style="background-color: #974b00;">
-          <div class="card-body">
-            <h2 class="text-center text-white mb-0">LIDEGE MEDICAL TOURISM</h2>
-          </div>
-        </div>
+      <a href="{% url 'register' %}" class="text-decoration-none btn" style="height: 5rem; background-color:#974b00 ; width:96%; border-radius: 50px; padding: 10px 20px; margin-bottom: 1rem; " >
+        <h2 class="text-center text-white mb-0" style="padding: 0.3rem;">LIDEGE MEDICAL TOURISM</h2> 
       </a>
-      <a href="#" class="text-decoration-none w-100">
-        <div class="card animate__animated animate__fadeInLeftBig animate__delay-2s mb-3" style="background-color: #5c3610;">
-          <div class="card-body">
-            <h2 class="text-center text-white mb-0">LIDEGE LOGISTICS</h2>
-          </div>
-        </div>
+      <a href="{% url 'register' %}" class="text-decoration-none btn" style="height: 5rem; background-color:#5c3610 ; width:96%; border-radius: 50px; padding: 10px 20px; margin-bottom: 1rem;" >
+        <h2 class="text-center text-white mb-0" style="padding: 0.3rem;">LIDEGE LOGISTICS</h2> 
       </a>
     </div>
     <div class="col-md-2 animate__animated animate__fadeInRightBig animate__delay-2.5s" style="background-color: #8f551a;">
@@ -47,7 +35,7 @@
     </div>
   </div>
   <div class="row mx-0" style="height: 10rem; background-color: #5c3610;">
-    <div style="height: 98%; width: 98%; background-color: white; margin-top: 0.5rem;margin-left: 0.5rem;">
+    <div style="height: 98%; width: 98%; background-color: white; margin-top: 0.5rem; margin-left: 1%;">
 
     </div>
   </div>
