--- a/applicantsReg/templates/profile_view.html
+++ b/applicantsReg/templates/profile_view.html
@@ -9,7 +9,7 @@
 {%block content%}
  <div class="row" style="padding-top: 1rem; background-color:#f1e7dd27 ;">
    <div class="col-md-12" style="height: auto;">
-    <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:1rem; background-color:#4d4034d8;" href="{%url 'startApplication'%}">
+    <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:1rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="{%url 'startApplication'%}">
       <i class="fa-solid fa-backward"></i>
     Back to application
   </a>
@@ -61,7 +61,7 @@
                             </tr>
 
                             <tr>
-                              <td colspan="2"><a class="btn " href="{%url 'applicant_details'%}" style="width: 70%; margin-left: 15%; background-color:#3a3027; color: white;">MODIFY/DELETE</a></td>
+                              <td colspan="2"><a class="btn " href="{%url 'applicant_details'%}" style="width: 70%; margin-left: 15%; background-color:#974b00; color: white;">MODIFY/DELETE</a></td>
                             </tr>
                           </tbody>
                         </table>
@@ -116,7 +116,7 @@
                             </tr>
 
                             <tr>
-                              <td colspan="2"><a class="btn" href="{%url 'guardian'%}" style="width: 70%; margin-left: 15%; background-color:#3a3027; color: white;">MODIFY/DELETE</a></td>
+                              <td colspan="2"><a class="btn" href="{%url 'guardian'%}" style="width: 70%; margin-left: 15%; background-color:#974b00; color: white;">MODIFY/DELETE</a></td>
                             </tr>
                           </tbody>
                         </table>
@@ -167,7 +167,7 @@
                             </tr>
 
                             <tr>
-                              <td colspan="2"><a class="btn" href="{%url 'academics'%}" style="width: 70%; margin-left: 15%; background-color:#3a3027; color: white;">MODIFY/DELETE</a></td>
+                              <td colspan="2"><a class="btn" href="{%url 'academics'%}" style="width: 70%; margin-left: 15%; background-color:#974b00; color: white;">MODIFY/DELETE</a></td>
                             </tr>
                           </tbody>
                         </table>
@@ -241,7 +241,7 @@
                             
                             
                             <tr>
-                              <td colspan="2"><a class="btn btn-dark" href="{%url 'selections'%}" style="width: 70%; margin-left: 15%; background-color:#3a3027; color: white;">MODIFY/DELETE</a></td>
+                              <td colspan="2"><a class="btn btn-dark" href="{%url 'selections'%}" style="width: 70%; margin-left: 15%; background-color:#974b00; color: white;">MODIFY/DELETE</a></td>
                             </tr>
                           </tbody>
                         </table>
@@ -303,7 +303,7 @@
                               
 
                             <tr>
-                              <td colspan="3"><a class="btn btn-dark" href="{%url 'other'%}" style="width: 70%; margin-left: 15%; background-color:#3a3027; color: white;">MODIFY/DELETE</a></td>
+                              <td colspan="3"><a class="btn btn-dark" href="{%url 'other'%}" style="width: 70%; margin-left: 15%; background-color:#974b00; color: white;">MODIFY/DELETE</a></td>
                             </tr>
                           </tbody>
                         </table>
