--- a/applicantsReg/templates/referral_link.html
+++ b/applicantsReg/templates/referral_link.html
@@ -15,7 +15,7 @@
             <div class="card" style="margin-top: 6rem; width: 90%; margin-left: 5%; background-color: #b19982b9;">
                 <h1 style="text-align: center; margin: 1rem;">Your referral link</h1>
                 <p style="text-align: center;">Copy the link below and share it with others:</p>
-                <input style="padding-left:17rem;" class="form-control" type="text" value="{{ referral_link }}" readonly>
+                <input class="form-control" type="text" value="{{ referral_link }}" readonly>
             </div>
             
         </div>
