--- a/applicantsReg/templates/userinfo.html
+++ b/applicantsReg/templates/userinfo.html
@@ -321,9 +321,9 @@
    </div>
    <div class="col-md-3">
     <div class="card mt-3" style="padding:2rem; width: 96%; margin-left: 2%;">
-      <a href="{%url 'addmission' addmitted.user.id%}" style="margin-bottom: 1rem; background-color:#3a3027; color: white;" class="btn">Addmitt Student</a>
+      <a href="{%url 'addmission' addmitted.user.id%}" style="margin-bottom: 1rem; background-color:#974b00; color: white;" class="btn">Addmitt Student</a>
 
-      <a href="{%url 'addmission_status_staff' addmitted.user.id%}" style="margin-bottom: 1rem; background-color:#3a3027; color: white;" class="btn">View Admission status</a>
+      <a href="{%url 'addmission_status_staff' addmitted.user.id%}" style="margin-bottom: 1rem; background-color:#974b00; color: white;" class="btn">View Admission status</a>
     </div>
 
   </div>
