--- a/applicantsReg/templates/addmission.html
+++ b/applicantsReg/templates/addmission.html
@@ -8,17 +8,14 @@
 
     </div>
     <div class="col-md-8">
-        <div class="card" style="margin-top: 4.5rem; padding: 1rem;">
+        <div class="card" style="margin-top: 4.5rem; padding: 1rem; width: 70%; margin-left: 15%;">
             <div class="row" style="background-color:#f0dcc931; margin-bottom: 3rem;">
-                <div class="col-md-4">
-                    
-                </div>
-                <div class="col-md-8">
+                <div class="col-md-12">
                     <h3 style="text-align: center;">STUDENT ADDMISSIOIN</h3>
                     <form action="" method="POST" enctype="multipart/form-data">
                         {%csrf_token%}
                         {{form|crispy}}
-                        <input type="submit" value="Submit" class="btn btn-dark" style="width: 40%; margin-left: 30%;">
+                        <input type="submit" value="Submit" class="btn" style="width: 40%; margin-left: 30%; background-color:#974b00; color: white;">
                     </form>
                 </div>
             </div>
