--- a/applicantsReg/templates/applicantList.html
+++ b/applicantsReg/templates/applicantList.html
@@ -40,7 +40,7 @@
     <link href="offcanvas.css" rel="stylesheet">
   </head>
   <body style="background-color: #D9CCC1; width: cover;">
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow" style="width: cover;">
+    <header class="navbar navbar-dark sticky-top flex-md-nowrap p-0 shadow" style="width: cover; background-color:#974b00 ;">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#"></a>
         <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation" style="margin-left: 10rem;">
           <span class="navbar-toggler-icon"></span>
@@ -57,16 +57,16 @@
   <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">
   </div>
  <div style="height:auto; margin-top: 1rem;">
-  <a class="btn" style="width: 70%; margin-left: 15%; margin-bottom: 1rem; background-color: #30251c; color: white;" href="{%url 'refferal'%}">
+  <a class="btn" style="width: 70%; margin-left: 15%; margin-bottom: 1rem; background-color: #695c51; color: white;" href="{%url 'refferal'%}">
     <i class="fa-solid fa-link"></i>
     Invite applicants through your refferal link</a>
  </div>
   {%if user.is_superuser%}
   <div class="card" style="padding-bottom: 1rem;">
-    <div class="card-header" style="background-color: rgb(102, 89, 72);">
-      <h3 style="text-align: center; margin-top: 1rem; color: white;">STAFF</h3>
+    <div class="card-header">
+      <h3 style="text-align: center; margin-top: 1rem; color: brown;">STAFF</h3>
     </div>
-    <div class="card-body table-responsive" style="background-color: rgba(102, 89, 72, 0.829);">
+    <div class="card-body table-responsive">
       
       <table class="table table-striped table-bordered">
         <thead>
@@ -97,9 +97,9 @@
 
     
 
-  <div class="card bg-dark mt-3">
+  <div class="card mt-3" style="background-color:">
     <div class="card-header">
-      <h6 style="color: white; margin: 1rem;">New Applicants</h6>
+      <h6 style="color: brown; margin: 1rem;">New Applicants</h6>
     </div>
     <div class="card-body table-responsive">
       <table class="table table-striped table-bordered">
