--- a/applicantsReg/templates/base2.html
+++ b/applicantsReg/templates/base2.html
@@ -114,7 +114,7 @@
               Personal Details
             </a>
           </li>
-          <li class="nav-item bg-dark mb-2">
+          <li class="nav-item mb-2" style="background-color: #974b00;">
             <a href="{%url 'guardian'%}" class="nav-link" style="color: white; text-align: center;">
               Guardian details
             </a>
