--- a/applicantsReg/templates/base4.html
+++ b/applicantsReg/templates/base4.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'css/headers.css'%}" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -104,7 +104,7 @@
     {%endblock%}
 </head>
 <body>
-     <div class="row bg-dark fixed-top" style="height: 1rem;"></div>
+     <div class="row fixed-top" style="height: 1rem; background-color: #974b00;"></div>
      <div id="mySidepanel" class="sidepanel mt-3">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"></a>
       <div class="d-flex flex-column flex-shrink-0 p-3" style="width: 300px; background-color: #b19982ce;">
@@ -113,26 +113,26 @@
         </a>
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
-          <li class="nav-item bg-dark mb-2 mt-2">
-            <a href="{%url 'applicant_details'%}" class="nav-link" aria-current="page" style="color: white; text-align: center;">
+          <li class="nav-item mb-2 mt-2" style="background-color:#974b00 ;">
+            <a href="{%url 'applicant_details'%}" class="btn" aria-current="page" style="color: white; text-align: center; border-radius: 50px; padding: 10px 20px;">
               <i class="fa-solid fa-border-all"></i>
               All applicants
             </a>
           </li>
-          <li class="nav-item bg-dark mb-2">
+          <li class="nav-item mb-2" style="background-color:#974b00 ;">
             <a href="#" class="nav-link" style="color: white; text-align: center;">
               <i class="fa-solid fa-book"></i>
-              addmitted
+              admitted
             </a>
           </li>
-          <li class="nav-item bg-dark mb-2">
+          <li class="nav-item mb-2" style="background-color:#974b00 ;">
             <a href="#" class="nav-link " style="color: white; text-align: center;">
               <i class="fa-solid fa-building-columns"></i>
               Schoralships
             </a>
           </li>
-          <li class="nav-item bg-dark mb-2">
-            <a href="{%url 'logout'%}" class="nav-link" style="color: white; text-align: center;">
+          <li class="nav-item mb-2" style="background-color:#974b00 ;">
+            <a href="{%url 'logout'%}" class="btn" style="color: white; text-align: center;">
               <i class="fa-solid fa-right-from-bracket"></i>
               logout
             </a>
