--- a/applicantsReg/templates/personalDetails.html
+++ b/applicantsReg/templates/personalDetails.html
@@ -49,7 +49,7 @@
 
         {{form.profile_image|as_crispy_field}}
 
-        <input type="submit" value="Submit" class="btn btn-dark" style="width: 40%; margin-left: 30%;">
+        <input type="submit" value="Submit" class="btn btn-dark" style="background-color:#974b00; width: 40%; margin-left: 30%; color: white; border-radius: 50px; padding: 10px 20px;">
       </form>
     </div>
   </div>
