--- a/applicantsReg/templates/selections.html
+++ b/applicantsReg/templates/selections.html
@@ -47,7 +47,7 @@
                         </div>
                         
                         
-                        <input type="submit" value="Submit" class="btn btn-dark" style="width: 40%; margin-left: 30%;">
+                        <input type="submit" value="Submit" class="btn btn-dark" style="background-color:#974b00; width: 40%; margin-left: 30%; color: white; border-radius: 50px; padding: 10px 20px;">
                     </form>
                 </div>
             </div>
