modified views again

--- a/applicantsReg/templates/base5.html
+++ b/applicantsReg/templates/base5.html
@@ -68,7 +68,7 @@
           
             <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="{%url 'addmission_status'%}">
                 <i class="fa-solid fa-address-card"></i>
-                Addmission Status
+                Admission Status
             </a>
           
             <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
