changed button color in admission status

--- a/applicantsReg/templates/addmission_status.html
+++ b/applicantsReg/templates/addmission_status.html
@@ -61,7 +61,7 @@
 
               <tr>
                 {%if addmitted.addmission_leter %}
-                <td colspan="2"><a class="btn btn-dark" href="{{addmitted.addmission_leter.url}}" style="width: 40%; margin-left: 30%;">Download Addmission leter</a></td>
+                <td colspan="2"><a class="btn " href="{{addmitted.addmission_leter.url}}" style="width: 40%; margin-left: 30%; background-color: #974b00;">Download Addmission leter</a></td>
                 {%endif%}
               </tr>
             </tbody>
