--- a/applicantsReg/templates/base5.html
+++ b/applicantsReg/templates/base5.html
@@ -66,30 +66,30 @@
             application status
             </a>
           
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="{%url 'addmission_status'%}">
+            <a class="btn" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="{%url 'addmission_status'%}">
                 <i class="fa-solid fa-address-card"></i>
                 Admission Status
             </a>
           
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
+            <a class="btn" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
                 <i class="fa-solid fa-question"></i>
                 help desk
             </a>
           
           
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
+            <a class="btn" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
                 <i class="fa-solid fa-graduation-cap"></i>
                 Schoralships
             </a>
           
           
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
+            <a class="btn" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
                 <i class="fa-solid fa-key"></i>
               change password
             </a>
           
         
-            <a class="btn btn-dark" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
+            <a class="btn" style="width: 90%; margin-left: 5%; margin-bottom:0.5rem; background-color:#974b00; border-radius: 50px; padding: 10px 20px;" href="#">
                 <i class="fa-solid fa-trash"></i>
              Delete account
             </a>
